--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1,7 +1,7 @@
 /***************************
   Jet-Antd Library
 ***************************/
-@import '../../lib/jet-antd/lib/jet-antd.less';
+@import "~@jet-lab/jet-antd/lib/jet-antd.less";
 
 /***************************
   App Specific Styles
@@ -11,6 +11,10 @@
 @health-gradient: linear-gradient(90deg, @danger 0%, @warning 25%, @success 75%);
 // App
 .jet-app {
+  &.ant-scrolling-effect {
+    overflow-y: scroll !important;
+  }
+
   // Modals
   .modal-content {
     &-detail {
@@ -42,7 +46,7 @@
   // Jet Inputs
   .jet-input {
     input {
-      border-radius: @round-radius;
+      border-radius: @border-radius;
       border-top-right-radius: 0px;
       border-bottom-right-radius: 0px;
       height: 45px;
@@ -52,8 +56,8 @@
       height: 45px;
       margin-left: -5px;
       background: @gradient;
-      border-top-right-radius: @round-radius;
-      border-bottom-right-radius: @round-radius;
+      border-top-right-radius: @border-radius;
+      border-bottom-right-radius: @border-radius;
       padding: 0 @spacing-sm;
       cursor: pointer;
       z-index: 10;
@@ -62,7 +66,6 @@
       }
       .anticon {
         font-size: 25px !important;
-        margin-right: 5px;
         margin-bottom: -2px;
       }
 
@@ -341,11 +344,11 @@
 
         &.borrowed {
           background: @danger;
-          box-shadow: @neu-shadow-inset-danger;
+          box-shadow: @neu-shadow-inset-color;
         }
         &.liquid {
           background: @success;
-          box-shadow: @neu-shadow-inset-success;
+          box-shadow: @neu-shadow-inset-color;
         }
       }
       .reserve-subdetails {
@@ -449,6 +452,11 @@
                     background: rgba(200, 200, 200, 0.25);
                   }
                 }
+                &:hover {
+                  td {
+                    background: rgba(0, 0, 0, 0.25) !important;
+                  }
+                }
               }
             }
           }
@@ -460,7 +468,7 @@
     }
 
     .radar-loader {
-      padding: 16px;
+      padding: 0 @spacing-md @spacing-xl @spacing-md;
       min-width: 240px;
       display: flex;
       justify-content: center;
@@ -657,7 +665,6 @@
             box-shadow: inset 0px -5px 8px -5px rgba(0, 0, 0, 0.3);
             padding: @spacing-xs 0;
             background: @primary;
-            opacity: @subtle-opacity;
             cursor: pointer;
             transition: opacity @transition-duration ease-in-out;
             p {
@@ -668,35 +675,11 @@
               line-height: 17px;
               opacity: @disabled-opacity;
               color: @secondary-3;
-
-              &::after {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                height: 1px;
-                width: 100%;
-                background: @secondary-3;
-                opacity: 0;
-              }
-            }
-            // Dark theme select
-            &.dark {
-              background: @primary;
-              opacity: 1;
-
-              &:hover {
-                opacity: 0.95;
-              }
             }
 
             &:hover,
             &.active {
-              opacity: 1;
-
-              p::after {
-                opacity: inherit;
-              }
+              opacity: 0.7;
             }
             &.active {
               background: unset;
@@ -812,8 +795,9 @@
             width: calc(50% - (@spacing-sm * 2));
 
             span {
-              font-size: @base-font-size;
+              font-size: @lg-font-size;
               padding: @spacing-sm;
+              color: @secondary-3;
             }
           }
         }
@@ -857,9 +841,8 @@
           }
           tbody {
             tr {
-              border-bottom: 2px solid @primary;
               &:last-of-type {
-                border-bottom-width: 10px;
+                border-bottom: 10px solid @primary;
               }
             }
           }
@@ -878,17 +861,26 @@
             }
           }
           tr {
+            border-radius: @border-radius;
             &.active {
-              box-shadow: @neu-shadow-inset-2;
+              box-shadow: @neu-shadow-inset-sm;
               background: @primary-2;
 
               &:active {
-                box-shadow: @neu-shadow-inset;
+                box-shadow: @neu-shadow-inset-3;
               }
             }
 
             td {
               padding: @spacing-md 0;
+              &:first-of-type {
+                border-top-left-radius: @border-radius;
+                border-bottom-left-radius: @border-radius;
+              }
+              &:last-of-type {
+                border-top-right-radius: @border-radius;
+                border-bottom-right-radius: @border-radius;
+              }
               &.gradient-text {
                 padding-bottom: calc(@spacing-md - 4px);
               }
@@ -927,6 +919,9 @@
               &:last-of-type {
                 opacity: 0;
 
+                .anticon {
+                  font-size: 22px;
+                }
                 svg path {
                   fill: @jet-green;
                 }
@@ -1134,6 +1129,10 @@
           fill: @secondary;
         }
       }
+    }
+
+    .ant-select-selector {
+      padding-right: 35px;
     }
   }
 
