need to figure out why no positions

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -598,13 +598,14 @@
 
       .ant-skeleton {
         width: 250px;
-        margin: 40px 0;
+        margin: 20px 0;
       }
       .trade-market-tvl {
         margin-right: @spacing-xl;
 
         .green-text {
           font-size: 80px;
+          line-height: 60px;
         }
       }
       .trade-position-snapshot {
