--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -107,7 +107,7 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        left: @spacing-md;
+        left: @spacing-base;
       }
 
       .asset-abbrev-usd {
@@ -333,7 +333,7 @@
       .native-toggle-container {
         position: relative;
         width: 100%;
-        margin: @spacing-md 0;
+        margin: @spacing-base 0;
 
         .toggler {
           position: absolute;
@@ -404,7 +404,7 @@
       padding: unset;
 
       .ant-modal-body {
-        padding: 0 @spacing-md !important;
+        padding: 0 @spacing-base !important;
       }
 
       .table-container {
@@ -480,7 +480,7 @@
     }
 
     .radar-loader {
-      padding: 0 @spacing-md @spacing-xl @spacing-md;
+      padding: 0 @spacing-base @spacing-xl @spacing-base;
       min-width: 240px;
       display: flex;
       justify-content: center;
@@ -502,7 +502,7 @@
         font-size: @xl-font-size;
       }
       button {
-        margin: @spacing-md auto 0 auto;
+        margin: @spacing-base auto 0 auto;
       }
 
       // If user is viewing c-ratio details
@@ -525,7 +525,7 @@
       position: relative;
       width: 100%;
       height: 5px;
-      margin: @spacing-md 0;
+      margin: @spacing-base 0;
       background: @health-gradient;
       border-radius: @round-radius;
       box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.15), inset 1px 1px 2px rgba(0, 0, 0, 0.15);
@@ -724,7 +724,7 @@
           .mobile-trade-select {
             display: none;
             width: 100%;
-            margin-bottom: @spacing-md;
+            margin-bottom: @spacing-base;
 
             .ant-select {
               border-radius: unset;
@@ -781,6 +781,9 @@
           .bold-text {
             color: @secondary-3;
           }
+          .max-amount {
+            cursor: pointer;
+          }
           .jet-input {
             span {
               color: @primary;
@@ -829,10 +832,10 @@
 
       // Market table
       .market-table {
-        width: calc(100% - (@spacing-md * 2));
+        width: calc(100% - (@spacing-base * 2));
         border-bottom-left-radius: @border-radius;
         border-bottom-right-radius: @border-radius;
-        padding: @spacing-lg @spacing-md 0 @spacing-md;
+        padding: @spacing-lg @spacing-base 0 @spacing-base;
 
         .table-search {
           width: 100%;
@@ -896,7 +899,7 @@
             }
 
             td {
-              padding: @spacing-md 0;
+              padding: @spacing-base 0;
               &:first-of-type {
                 border-top-left-radius: @border-radius;
                 border-bottom-left-radius: @border-radius;
@@ -906,7 +909,7 @@
                 border-bottom-right-radius: @border-radius;
               }
               &.gradient-text {
-                padding-bottom: calc(@spacing-md - 4px);
+                padding-bottom: calc(@spacing-base - 4px);
               }
               &.market-table-asset {
                 span,
@@ -1007,7 +1010,7 @@
   .transaction-logs {
     align-items: flex-start;
     h1 {
-      padding-left: @spacing-md;
+      padding-left: @spacing-base;
       font-size: @xl-font-size;
       margin: unset;
 
@@ -1032,14 +1035,14 @@
 
       table {
         width: 98%;
-        padding: @spacing-md @spacing-lg @spacing-sm @spacing-lg;
+        padding: @spacing-base @spacing-lg @spacing-sm @spacing-lg;
         thead tr {
           cursor: unset;
         }
         tr {
           &:last-of-type {
             td {
-              padding: 0 0 0 @spacing-md;
+              padding: 0 0 0 @spacing-base;
               width: 200px;
               opacity: 1;
               &:first-of-type {
@@ -1161,7 +1164,7 @@
 
     .anticon {
       font-size: 14px;
-      margin: @spacing-md @spacing-xs;
+      margin: @spacing-base @spacing-xs;
       &:hover {
         svg path {
           transition: fill @transition-duration ease-out;
@@ -1236,7 +1239,7 @@
     .percentage-chart {
       width: 115px;
       height: 115px;
-      margin: @spacing-md 0;
+      margin: @spacing-base 0;
 
       .chart-info {
         width: 115px;
@@ -1297,7 +1300,7 @@
               tr {
                 &:first-of-type {
                   td {
-                    padding-top: @spacing-md;
+                    padding-top: @spacing-base;
 
                     img {
                       height: 26px;
@@ -1306,7 +1309,7 @@
                 }
                 &:last-of-type {
                   td {
-                    padding-bottom: @spacing-md;
+                    padding-bottom: @spacing-base;
                   }
                 }
               }
@@ -1329,7 +1332,7 @@
           margin: @spacing-xs 0;
         }
         .trade-market-tvl {
-          padding: 0 @spacing-md;
+          padding: 0 @spacing-base;
           align-items: flex-end;
 
           &:first-of-type {
@@ -1366,7 +1369,7 @@
         width: 98%;
         // Trade Panel
         .trade-panel {
-          padding: 0 0 @spacing-md 0;
+          padding: 0 0 @spacing-base 0;
           flex-direction: column;
           justify-content: center;
 
@@ -1396,7 +1399,7 @@
             }
             &:last-of-type {
               width: 100%;
-              padding-bottom: @spacing-md;
+              padding-bottom: @spacing-base;
             }
             &-disabled-message {
               width: unset;
@@ -1412,7 +1415,7 @@
             tr {
               td {
                 font-size: @sm-font-size;
-                padding: @spacing-sm @spacing-md;
+                padding: @spacing-sm @spacing-base;
                 min-width: 75px;
 
                 &.reserve-detail {
