remove leverage, fix ui bugs

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -10,8 +10,8 @@
 @neu-table-shadow: -4px 0px 10px @light-shadow, 2px 4px 8px @dark-shadow;
 @health-gradient: linear-gradient(90deg, @success 0%, @warning 65%, @danger 90%);
 // Override brand colors for V1.5
-@jet-green: #B8B8FE;
-@jet-blue: #B9DE9B; 
+@jet-green: #b8b8fe;
+@jet-blue: #b9de9b;
 @success: @jet-blue;
 
 // App
