fix radar styling

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -434,7 +434,7 @@
           thead {
             th {
               padding: @spacing-xs 0;
-              font-size: @xs-font-size;
+              font-size: @sm-font-size;
               width: 140px;
               text-align: center;
             }
