--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -414,7 +414,7 @@
           text-align: left;
           font-size: 12px;
           p {
-            font-size: @lg-font-size
+            font-size: @lg-font-size;
           }
         }
       }
