JV15-242 No wrap for asset name

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1016,6 +1016,7 @@
                 span {
                   &:first-of-type {
                     top: 16px;
+                    white-space: nowrap;
                   }
                   &:last-of-type {
                     opacity: @disabled-opacity;
