--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1016,7 +1016,6 @@
                 span {
                   &:first-of-type {
                     top: 16px;
-                    white-space: nowrap;
                   }
                   &:last-of-type {
                     opacity: @disabled-opacity;
@@ -1283,6 +1282,35 @@
     }
     b {
       text-decoration: underline;
+    }
+  }
+}
+
+// Special handling for asset name overlap
+@media screen and (max-width: 1100px) {
+  .jet-app {
+    .market-table {
+      .table-container {
+        .market-table-asset {
+          height: 25px;
+          div {
+            display: flex;
+            flex-direction: column;
+          }
+          span {
+            position: relative !important;
+            transform: unset !important;
+            top: 0 !important;
+            &:first-of-type {
+              width: calc(100% - 45px);
+            }
+            &:last-of-type {
+              opacity: @disabled-opacity;
+              font-size: @sm-font-size;
+            }
+          }
+        }
+      }
     }
   }
 }
